Alignment fix for defects labels.

--- a/Hygieia_UI/UI/src/components/widgets/feature/jiraView.less
+++ b/Hygieia_UI/UI/src/components/widgets/feature/jiraView.less
@@ -252,3 +252,9 @@
 .agile-board-link {
     font-size: 14px;
 }
+
+.agile-board-circle-text-alignment {
+    display: table-cell;
+    text-align: -webkit-center;
+    vertical-align: middle;
+}
